FullQa New/src/objects/Opportunity_Booking_Event__c.object
<CustomObject>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <formula>Opportunity__r.Booked_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Value__c</fullName>
        <formula>Opportunity__r.BookedValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_SubType__c</fullName>
        <label>Booking SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>BizDev Emerging</fullName>
                </value>
                <value>
                    <fullName>BizDev Launch</fullName>
                </value>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Excise</fullName>
                </value>
                <value>
                    <fullName>MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>Trustfile</fullName>
                </value>
                <value>
                    <fullName>Addon - AvaTax</fullName>
                </value>
                <value>
                    <fullName>Addon - Brazil</fullName>
                </value>
                <value>
                    <fullName>Addon - Communications</fullName>
                </value>
                <value>
                    <fullName>Addon - EMEA</fullName>
                </value>
                <value>
                    <fullName>Addon - APAC</fullName>
                </value>
                <value>
                    <fullName>Addon - CertCapture</fullName>
                </value>
                <value>
                    <fullName>Addon - Excise</fullName>
                </value>
                <value>
                    <fullName>Addon - MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>Addon - Trustfile</fullName>
                </value>
                <value>
                    <fullName>Upgrade - AvaTax</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Brazil</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Communications</fullName>
                </value>
                <value>
                    <fullName>Upgrade - EMEA</fullName>
                </value>
                <value>
                    <fullName>Upgrade - APAC</fullName>
                </value>
                <value>
                    <fullName>Upgrade  - CertCapture</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Excise</fullName>
                </value>
                <value>
                    <fullName>Upgrade - MatrixMaster</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Trustfile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Booking Events</relationshipLabel>
        <relationshipName>Opportunity_Booking_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Booking Event</label>
    <nameField>
        <displayFormat>obe{0000}</displayFormat>
        <label>Opportunity Booking Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Booking Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>